# Hantei-chan

./: .gitignore  .gitmodules  BACKGROUND_SYSTEM_READY.md  BGMAKE_ARCHITECTURE.md  BGMAKE_CG_ANALYSIS.md  BGMAKE_INTEGRATION_PLAN.md  BGMAKE_QUICKSTART.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  build.sh  mingw-toolchain.cmake
.claude/: settings.local.json
.github/: README.md
.github/workflows/: build.yml  release.yml
Hantei_Docs/: Effect_Type3_Implementation_Status.md  Open_Issues.md  multi_view_architecture.md
cmake/: GenerateVersionInfo.cmake  imgui.cmake  version.h.in
notes/: HA6_Parameters.md  IF.txt  VERSION_SYSTEM.md  fork_comparison_analysis.md  string_encoding_todo.md
src/: about.h  box_pane.cpp  box_pane.h  cg.cpp  cg.h  character_instance.cpp  character_instance.h  character_view.cpp  character_view.h  copy_manager.cpp  copy_manager.h  draw_window.h  enums.h  filedialog.cpp  filedialog.h  frame_disp.h  framedata.cpp  framedata.h  framedata_labels.h  framedata_load.cpp  framedata_load.h  framedata_load_ha4.cpp  framedata_load_ha4_binary.cpp  framedata_save.cpp  framestate.cpp  framestate.h  ha4_format.h  hud_theme_exporter.cpp  hud_theme_exporter.h  imgui_utils.cpp  ini.cpp  ini.h  main.cpp  main.h  main_frame.cpp  main_frame.h  main_pane.cpp  main_pane.h  misc.cpp  misc.h  (+18 more)
src/PatEditor/: pat_part_pane.cpp  pat_part_pane.h  pat_partset_pane.cpp  pat_partset_pane.h  pat_shape_pane.cpp  pat_shape_pane.h  pat_texture_pane.cpp  pat_texture_pane.h  pat_tool_pane.cpp  pat_tool_pane.h
src/background/: INTEGRATION_GUIDE.md  bg_file.cpp  bg_file.h  bg_renderer.cpp  bg_renderer.h  bg_types.h
src/frame_disp/: frame_disp_af.h  frame_disp_as.h  frame_disp_at.h  frame_disp_common.h  frame_disp_ef.h  frame_disp_if.h
src/frame_disp/conditions/: README.md
src/frame_disp/effects/: README.md  effect_actor.h  effect_audio.h  effect_damage.h  effect_misc.h  effect_preset.h  effect_spawn.h  effect_state.h  effect_unknown.h  effect_visual.h
src/parts/: parts.cpp  parts.h  parts_part.cpp  parts_part.h  parts_partset.cpp  parts_partset.cpp.bak  parts_partset.h  parts_shape.cpp  parts_shape.h  parts_texture.cpp  parts_texture.h
src/ui/: main_menu_impl.h  main_ui_impl.h
